# helloSDL

./: .gitignore  CMakeLists.txt  main.c  readme.md
